# Wolf3d

./: .gitignore  CMakeLists.txt  Makefile  abs.c  add_perimeter_walls.c  base_map.w3d  check_arguments.c  check_event.c  handle_args_error.c  handle_error.c  handle_map_error.c  height_for_column.c  init_params.c  init_position.c  init_sdl.c  main.c  make_calculations.c  parse_map.c  read_map.c  route_events.c  set_wall_color.c  wolf3d.h
libftprintf/libft/: ft_strsub_chr.c
